RESOLVED FIXED241280
Regression (r294405): missing tiles during scrolling after foregrounding app
https://bugs.webkit.org/show_bug.cgi?id=241280
Summary Regression (r294405): missing tiles during scrolling after foregrounding app
Sihui Liu
Reported 2022-06-03 13:07:52 PDT
...
Attachments
Sihui Liu
Comment 1 2022-06-03 13:09:28 PDT Comment hidden (obsolete)
Sihui Liu
Comment 2 2022-06-03 13:09:57 PDT
Sihui Liu
Comment 3 2022-06-03 13:14:07 PDT
EWS
Comment 4 2022-06-03 16:59:55 PDT
Committed r295254 (251302@main): <https://commits.webkit.org/251302@main> Reviewed commits have been landed. Closing PR #1283 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.