Regression (r294405): missing tiles during scrolling after foregrounding app https://bugs.webkit.org/show_bug.cgi?id=241280

Reviewed by Chris Dumez.

Partially revert r294405 to disable ProcessStateMonitor that can make UI process fail to take foreground assertion after
app is foregrounded.

* Source/WebKit/UIProcess/ios/ProcessAssertionIOS.mm:
(-[WKProcessAssertionBackgroundTaskManager init]):
(-[WKProcessAssertionBackgroundTaskManager _releaseBackgroundTask]):

Canonical link: https://commits.webkit.org/251302@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295254 268f45cc-cd09-0410-ab3c-d52691b4dbfc